--- a/makechrootpkg.in
+++ b/makechrootpkg.in
@@ -307,7 +307,7 @@ move_products() {
 # }}}
 
 main() {
-	default_makepkg_args=(--syncdeps --noconfirm --log --holdver --skipinteg)
+	default_makepkg_args=(--syncdeps --noconfirm --holdver --skipinteg)
 	makepkg_args=("${default_makepkg_args[@]}")
 	keepbuilddir=false
 	update_first=false
