--- a/src/arch-nspawn.in
+++ b/src/arch-nspawn.in
@@ -66,6 +66,8 @@ nspawn_args=(
 	--as-pid2
 	--console=autopipe
 	--timezone=off
+	--rlimit=NOFILE=10000
+	--resolv-conf=copy-host
 )
 
 if (( ${#cache_dirs[@]} == 0 )); then
