Adjust systemd-nspawn flags
* Increase maximum number of open files (the default of 1000 is too less
  for some packages)
* Use /etc/resolv.conf from host (otherwise systemd-nspawn uses a config
  which does not work on my host setup)
* Now in-line with upstream: Remove --keep-unit since it causes sometimes
  errors and does not seem to be required

--- a/src/arch-nspawn.in
+++ b/src/arch-nspawn.in
@@ -63,6 +63,8 @@ nspawn_args=(
 	--slice="devtools-$(systemd-escape "${SUDO_USER:-$USER}")"
 	--machine="arch-nspawn-$$"
 	--as-pid2
+	--rlimit=NOFILE=10000
+	--resolv-conf=copy-host
 )
 
 if (( ${#cache_dirs[@]} == 0 )); then
