Adjust systemd-nspawn flags
* Remove --keep-unit since it causes sometimes errors and does not seem
  to be required
* Increase maximum number of open files (the default of 1000 is too less
  for some packages)
* Use /etc/resolv.conf from host (otherwise systemd-nspawn uses a config
  which does not work on my host setup)

--- a/arch-nspawn.in
+++ b/arch-nspawn.in
@@ -130,6 +130,9 @@ eval "$(grep -a '^CARCH=' "$working_dir/etc/makepkg.conf")"
 exec systemd-nspawn -q \
 	-D "$working_dir" \
 	-E "PATH=/usr/local/sbin:/usr/local/bin:/usr/bin" \
-	--register=no --keep-unit --as-pid2 \
+	--register=no \
+	--as-pid2 \
+	--rlimit=NOFILE=10000 \
+	--resolv-conf=copy-host \
 	"${mount_args[@]}" \
 	"$@"
