Adjust systemd-nspawn flags
* Increase maximum number of open files (the default of 1000 is too less
  for some packages)
* Use /etc/resolv.conf from host (otherwise systemd-nspawn uses a config
  which does not work on my host setup)

--- a/src/arch-nspawn.in
+++ b/src/arch-nspawn.in
@@ -65,6 +65,8 @@ nspawn_args=(
 	--machine="arch-nspawn-$$"
 	--as-pid2
 	--console=autopipe
+	--rlimit=NOFILE=10000
+	--resolv-conf=copy-host
 )
 
 if (( ${#cache_dirs[@]} == 0 )); then
