--- a/src/arch-nspawn.in
+++ b/src/arch-nspawn.in
@@ -125,6 +125,9 @@ fi
 exec systemd-nspawn -q \
 	-D "$working_dir" \
 	-E "PATH=/usr/local/sbin:/usr/local/bin:/usr/bin" \
-	--register=no --keep-unit --as-pid2 \
+	--register=no \
+	--as-pid2 \
+	--rlimit=NOFILE=10000 \
+	--resolv-conf=copy-host \
 	"${mount_args[@]}" \
 	"$@"
