Set TERM within the systemd-nspawn container in makechrootpkg
This is required by WINE to prevent
```
unknown: I need something more specific
```

--- a/src/makechrootpkg.in
+++ b/src/makechrootpkg.in
@@ -390,6 +390,7 @@ download_sources
 prepare_chroot
 
 nspawn_build_args=(
+	--setenv=TERM=xterm
 	--bind="${PWD//:/\\:}:/startdir"
 	--bind="${SRCDEST//:/\\:}:/srcdest"
 	--tmpfs="/tmp:${tmp_opts}"
