--- a/src/makechrootpkg.in
+++ b/src/makechrootpkg.in
@@ -371,6 +371,7 @@ download_sources
 prepare_chroot
 
 if arch-nspawn $cache_dir "$copydir" \
+	--setenv=TERM=xterm \
 	--bind="${PWD//:/\\:}:/startdir" \
 	--bind="${SRCDEST//:/\\:}:/srcdest" \
 	--tmpfs="/tmp:${tmp_opts}" \
