Set TERM within the systemd-nspawn container in makechrootpkg
This is required by WINE to prevent
```
unknown: I need something more specific
```

--- a/makechrootpkg.in
+++ b/makechrootpkg.in
@@ -367,6 +367,7 @@ download_sources
 prepare_chroot
 
 if arch-nspawn $cache_dir "$copydir" \
+	--setenv=TERM=xterm \
 	--bind="${PWD//:/\\:}:/startdir" \
 	--bind="${SRCDEST//:/\\:}:/srcdest" \
 	"${bindmounts_ro[@]}" "${bindmounts_rw[@]}" \
