--- a/arch-nspawn.in
+++ b/arch-nspawn.in
@@ -127,7 +127,9 @@ eval "$(grep -a '^CARCH=' "$working_dir/etc/makepkg.conf")"
 
 [[ -z $nosetarch ]] || unset CARCH
 
-exec systemd-nspawn -q \
+for p in  echo exec; do
+[[ $p == echo ]] && msg "Entering chroot \"$working_dir\" via:"
+"$p" systemd-nspawn -q \
 	-D "$working_dir" \
 	-E "PATH=/usr/local/sbin:/usr/local/bin:/usr/bin" \
 	--register=no \
@@ -136,3 +138,4 @@ exec systemd-nspawn -q \
 	--resolv-conf=copy-host \
 	"${mount_args[@]}" \
 	"$@"
+done
