Log systemd-nspawn invocation parameters
When debugging it is useful to know what parameters where
used.

--- a/src/arch-nspawn.in
+++ b/src/arch-nspawn.in
@@ -140,4 +140,7 @@ else
 	set_arch="${CARCH}"
 fi
 
-exec systemd-nspawn "${nspawn_args[@]}" "$@"
+msg "Entering chroot \"$working_dir\" via:"
+for p in echo exec; do
+"$p" systemd-nspawn "${nspawn_args[@]}" "$@"
+done
