Log systemd-nspawn invocation parameters
When debugging it is useful to know what parameters where
used.

--- a/src/arch-nspawn.in
+++ b/src/arch-nspawn.in
@@ -148,4 +148,7 @@ else
 	set_arch="${CARCH}"
 fi
 
-exec systemd-nspawn "${nspawn_args[@]}" "$@"
+for p in  echo exec; do
+[[ $p == echo ]] && msg "Entering chroot \"$working_dir\" via:"
+"$p" systemd-nspawn "${nspawn_args[@]}" "$@"
+done
